comments + welcome page additions

--- a/index.css
+++ b/index.css
@@ -13,6 +13,15 @@ a:hover{
     color: #488387;
 }
 
+.img-fluid{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 991px;
+    height: 300px;
+    object-fit: cover; 
+}
+
 .img-thumbnail{
     width: 55px;
     height: 55px;
@@ -32,4 +41,5 @@ a:hover{
     width: 50%;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 200px;
 }
