--- a/project.css
+++ b/project.css
@@ -1,33 +1,5 @@
 @import url('index.css'); /*so we don't have to repeat all the basic css code */
 
-.project-container{
-    min-height: 100vh;
-    height: 100vh; 
-    min-width: 100vh;
-    width: 100vh;
-}
-
-.project-content{
-    /* background-color: #fff; */
-    text-align: center;
-    height: 100%;
-}
-
-body {
-    background-color: #E6EBE0;
-    color: #ED6A5A;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-a{
-    color: #5CA4A9;
-    text-decoration: none;
-}
-a:hover{
-    color: #488387;
-}
-
 .img-fluid{
     display: block;
     margin-left: auto;
@@ -42,8 +14,23 @@ a:hover{
     height: 55px;
     padding: 0;
 }
+.heading-container{
+    margin-top: auto;
+    margin-bottom: auto;
+}
 
-.proj-headers{
+.text-container{
+    margin-top: 70px;
+}
+
+.main-header{
+    font-size: 8rem;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.proj-header{
     font-size: 2rem;
     text-align: center;
     margin-right: auto;
@@ -51,10 +38,10 @@ a:hover{
 }
 
 .proj-text{
-    font-size: 2rem;
+    font-size: 14px;
     color: #000;
     width: 50%;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 200px;
+    margin-bottom: 20px;
 }
