--- a/project.css
+++ b/project.css
@@ -4,23 +4,9 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 991px;
-    height: 300px;
+    width: 100%;
+    height: 350px;
     object-fit: cover; 
-}
-
-.img-thumbnail{
-    width: 55px;
-    height: 55px;
-    padding: 0;
-}
-.heading-container{
-    margin-top: auto;
-    margin-bottom: auto;
-}
-
-.text-container{
-    margin-top: 70px;
 }
 
 .main-header{
