--- a/about.css
+++ b/about.css
@@ -1,45 +1,17 @@
-body {
-    background-color: #E6EBE0;
-    color: #ED6A5A;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-}
+@import url('index.css'); /*so we don't have to repeat all the basic css code */
 
-a{
-    color: #5CA4A9;
-    text-decoration: none;
-}
-a:hover{
-    color: #488387;
-}
-
-.img-fluid{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 991px;
-    height: 300px;
-    object-fit: cover; 
-}
-
-.img-thumbnail{
-    width: 55px;
-    height: 55px;
-    padding: 0;
-}
 
 .about-header{
-    font-size: 2rem;
     text-align: center;
     margin-right: auto;
     margin-left: auto;
 }
 
 .about-text{
-    font-size: 2rem;
-    color: #000;
-    width: 50%;
+    line-height: 30px;
+    text-align: center;
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 200px;
 }
+
