--- a/specifications.css
+++ b/specifications.css
@@ -1,34 +1,22 @@
-body {
-    background-color: #E6EBE0;
-    color: #ED6A5A;
-    font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-a{
-    color: #5CA4A9;
-    text-decoration: none;
-}
-a:hover{
-    color: #488387;
-}
+@import url('index.css');
 
 .img-fluid{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 991px;
-    height: 300px;
+    width: 100%;
+    height: 350px;
     object-fit: cover; 
 }
 
-.img-thumbnail{
-    width: 55px;
-    height: 55px;
-    padding: 0;
+.main-header{
+    font-size: 8rem;
+    text-align: center;
+    margin-right: auto;
+    margin-left: auto;
 }
 
-.specs-headers{
+.specs-header{
     font-size: 2rem;
     text-align: center;
     margin-right: auto;
@@ -36,10 +24,17 @@ a:hover{
 }
 
 .specs-text{
-    font-size: 2rem;
+    font-size: 14px;
     color: #000;
     width: 50%;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 200px;
+    margin-bottom: 20px;
+}
+
+.img-diagram{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
 }
