--- a/about.css
+++ b/about.css
@@ -15,3 +15,12 @@
     margin-bottom: 200px;
 }
 
+.img-fluid{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 350px;
+    object-fit: cover; 
+}
+
