--- a/index.css
+++ b/index.css
@@ -13,12 +13,18 @@ a:hover{
     color: #488387;
 }
 
+footer {
+    padding: 10px 20px;
+    background: #9BC1BC;
+    color: white;
+  }
+
 .img-fluid{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 991px;
-    height: 300px;
+    width: 100%;
+    height: 350px;
     object-fit: cover; 
 }
 
